[project]
name = "finetunellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "huggingface-hub>=0.26.3",
    "lighteval>=0.6.2",
    "ipywidgets>=8.1.5",
    "transformers>=4.46.3",
    "trl>=0.12.1",
    "bitsandbytes>=0.45.0",
    "wandb>=0.22.1",
    "trackio>=0.5.0",
    "peft>=0.17.1",
]
